--- a/nft-game/package.json
+++ b/nft-game/package.json
@@ -5,17 +5,18 @@
   "dependencies": {
     "@chakra-ui/react": "^1.7.0",
     "@craco/craco": "^6.4.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@walletconnect/web3-provider": "^1.6.6",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "moralis": "^0.0.131",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.2.8",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
