--- a/nft-game/package.json
+++ b/nft-game/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chakra-ui/react": "^1.7.0",
     "@craco/craco": "^6.4.0",
+    "@ion-phaser/core": "^1.3.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,11 +14,13 @@
     "framer-motion": "^4.1.17",
     "moralis": "^0.0.131",
     "node-sass": "^6.0.1",
+    "phaser": "^3.55.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.2.8",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
